Fixed spacing and added place holder images
Fixed spacing in main.css and added place holder images to my layout

--- a/css/main.css
+++ b/css/main.css
@@ -22,75 +22,75 @@ html {
 }
 
 img {
-	width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 
 body {
-    margin: 0;
-    padding: 0; 
+  margin: 0;
+  padding: 0; 
 }
 
 .line-height {
-    line-height: 1rem;
+  line-height: 1rem;
 }
 
 .homepage {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .gutter { 
-    padding-left: 1em;
-    padding-top: 1em;
-    padding-right: 1em;
+  padding-left: 1em;
+  padding-top: 2em;
+  padding-right: 1em;
 }
 
 a:focus {
-    outline: 3px solid purple;
+  outline: 3px solid purple;
 }
 
 .skip-links {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 .skip-links a {
-    position: absolute;
-    top: -3em;
-    background-color: #000;
-    color: #fff;
-    text-decoration: none;
-    padding: 0.5em 0.75em;
-    font-size: 1.24em;
+  position: absolute;
+  top: -3em;
+  background-color: #000;
+  color: #fff;
+  text-decoration: none;
+  padding: 0.5em 0.75em;
+  font-size: 1.24em;
 }
 
 .skip-links a:focus {
-    top: 0;
+  top: 0;
 }
 
 article {
-    padding: 0;
-    overflow: hidden;   
+  padding: 0;
+  overflow: hidden;   
 }
 
 .title {
-    margin:0;
+  margin:0;
 }
 
 header {
-    overflow: hidden;
-    background-color: black ;
-    height: 4rem;
+  overflow: hidden;
+  background-color: black ;
+  height: 4rem;
 }
 
 .profile-picture {
-    height: 4rem;
-    width: auto;
-    display: block;
-    float: left;
-    margin: 0 0 0 1em;
-    padding-right: 4%
+  height: 4rem;
+  width: auto;
+  display: block;
+  float: left;
+  margin: 0 0 0 1em;
+  padding-right: 4%
 }
 
 .banner {
@@ -134,32 +134,32 @@ h1 {
 }
 
 h2 {
-    background-color: black;
-    font-size: 1.5rem;
-    margin: 2rem 20%;
-    color: #fff; 
-    text-align: center;
-    padding: .5rem 5%;
+  background-color: black;
+  font-size: 1.5rem;
+  margin: 2rem 20%;
+  color: #fff; 
+  text-align: center;
+  padding: .5rem 5%;
 }
 
 h3 {
-    
-    font-size: 1rem;
-    margin: 2rem 20%;
-    color: black; 
-    text-align: center;
-    padding: .5rem 5%;
+  font-size: 1rem;
+  margin: 2rem 20%;
+  color: black; 
+  text-align: center;
+  padding: .5rem 5%;
+  list-style-type: none;
 }
 
 .nav-top {
-	max-height: 0; 
-    overflow: hidden;
-	-moz-transition: all 250ms linear;
-	-o-transition: all 250ms linear;
-	-webkit-transition: all 250ms linear;
-	transition: all 250ms linear;
-    width: 100%;
-    margin: 0;
+  max-height: 0; 
+  overflow: hidden;
+  -moz-transition: all 250ms linear;
+  -o-transition: all 250ms linear;
+  -webkit-transition: all 250ms linear;
+  transition: all 250ms linear;
+  width: 100%;
+  margin: 0;
 }
 
 .nav-top ul { 
@@ -346,16 +346,6 @@ ul {
     }
 }
 
-
-
 body {
     line-height: 1;
 }
-
-.art-pieces {
-
-}
-  .no-js .defer-image {
-    display: none;
-}
-
